--- a/Piazza/path_configuration.json
+++ b/Piazza/path_configuration.json
@@ -1,3 +1,8 @@
 {
-    "rules": []
+    "rules": [
+        {
+            "patterns": [ "/login", "/sign_up" ],
+            "properties": { "presentation": "modal" }
+        }
+    ]
 }
